    + [NT] New file.
    + [NT] Add libav libraries.  Thanks to Andres Mejia for the
      suggestion and the suggested patch.  (Closes: #666765)

  * frontend/lintian:
    + [JW] Fix typo in error message.
    + [JW,NT] Fix handling of "override" option in the lintianrc file.
      (Closes: #666207)

  * lib/Lintian/Architecture.pm:
    + [NT] Lazily evaluate the data file.
  * lib/Lintian/Data.pm:
    + [NT] Lazily load data files.
    + [NT] Allow pre-process sub to alter existing value for a key
      by passing the previous value as third argument.
  * lib/Lintian/Output{,/*}.pm:
    + [NT] Replace non-printables with "?" in output.
  * lib/Lintian/Profile.pm:
    + [NT] Normalize profile name and replace "parents" with
      "profile_list".  The latter also includes the current profile
      name.
  * lib/Lintian/Tag/Info.pm:
    + [NT] Use Lintian::Data to load the manual-references data
      file instead using an ad-hoc parser.
  * lib/Util.pm:
    + [JW] Consider duplicate fields a syntax error in dctrl files.
      Previously, duplicate fields were silently ignored (except
      when a separate tag would check for it).  (Closes: #664061)

 -- Niels Thykier <niels@thykier.net>  Wed, 14 Mar 2012 22:55:46 +0100

lintian (2.5.6) unstable; urgency=low

  * checks/*:
    + [NT] Simplified some bit operations done on file permissions.
  * checks/binaries:
    + [NT] Fix false-negative missing-dependency-on-phpapi when the
      binary included a "SOVERSION" in its name.  Thanks to Ondřej
      Surý for the report.  (Closes: #662936)
  * checks/changelog-file:
    + [NT] Do not emit "no-upstream-changelog" for transitional
      packages.  Thanks to Paul Wise for the report.
      (Closes: #660076)
  * checks/cruft:
    + [NT] Added missing "unless" in the code.  Fixes false
      positive "source-contains-waf-binary".  Thanks to
      Dmitrijs Ledkovs for the report.  (Closes: #661561)
  * checks/debhelper: